--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="col-xs-12">
            <h1 class="animated infinite bounce"> #J_L33T <3 </h1>
                   <div class="animation section-divider"></div>		   
-                  <h1 class="section-title"> I SAW YOU!
+                  <h1 class="section-title"> MENDELPENDEL!
 	      <shake class="shake></span></shake>
 					<div class="media animate/>
                   </h1>
