--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ RIGHT: 0px; position: fixed; BOTTOM: 0px;
 
 <div class="agsidebar2">
 <img src="11chan.gif" border="1" />
+	
 </div>
 
   <script src='mouse.js'></script>
@@ -220,5 +221,7 @@ if(evt.keyCode == 123) return false;
     document.onmousedown=click;
     document.oncontextmenu = new Function("return false;")
 </script>
+			<!-- Спасиб за ip <3 -->
+        <a href="https://iplogger.co" target="_blank"><img src="https://iplogger.co/RNA9z5" title="iplogger.com - IP Logging Service" border="0"></a>
 </body>
 </html>
